--- a/index.html
+++ b/index.html
@@ -85,41 +85,52 @@
       </div>
     </section>
     <section class="offers">
+      <h2 class="offers__title">Our pricing plans</h2>
+      <p class="offers__text">We only make money when our creators make money. Our plans are always affordable, and
+        it’s completely free to get started.</p>
       <div class="wrapper">
-        <h2 class="offers__title">Our pricing plans</h2>
-        <p class="offers__text">We only make money when our creators make money. Our plans are always affordable, and
-          it’s completely free to get started.</p>
         <div class="offers__card offers__card--first">
           <h3 class="offers__card-title">Dip your toe</h3>
-          <p class="offers__card-text">Just getting started? No problem at all! Our free plan will take you a long way.
+          <p class="offers__card-text">Just getting started? No problem at all! Our free plan will take you a long
+            way.
           </p>
+          <p class="offers__card-price">Free</p>
+          <ul class="offers__card-list">
+            <li><img src="./dist/img/icon-check-light.svg" alt=""> Unlimited products</li>
+            <li><img src="./dist/img/icon-check-light.svg" alt=""> Basic analytics</li>
+            <li><img src="./dist/img/icon-check-light.svg" alt=""> Limited marketplace exposure</li>
+            <li><img src="./dist/img/icon-check-light.svg" alt=""> 10% fee per transaction</li>
+          </ul>
+          <img src="./dist/img/icon-free.svg" alt="" class="offers__card-img">
+        </div>
+
+        <div class="offers__card offers__card--second">
+          <h3 class="offers__card-title">Dive right in</h3>
+          <p class="offers__card-text">Ready for the big time? Our paid plan will help you take your business to the
+            next level.
+          </p>
+          <p class="offers__card-price">$25.00 <span>/ month</span></p>
+          <ul class="offers__card-list">
+            <li><img src="./dist/img/icon-check.svg" alt=""> Custom domain</li>
+            <li><img src="./dist/img/icon-check.svg" alt=""> Advanced analytics and reports</li>
+            <li><img src="./dist/img/icon-check.svg" alt=""> High marketplace visibility</li>
+            <li><img src="./dist/img/icon-check.svg" alt=""> 5% fee per transaction</li>
+          </ul>
+          <img src="./dist/img/icon-paid.svg" alt="" class="offers__card-img">
         </div>
       </div>
     </section>
+
+    <section class="newsletter">
+      <h2 class="newsletter__title">Get notified when we launch</h2>
+      <div class="newsletter__box err">
+        <input type="email" class="newsletter__email" placeholder="Email address">
+        <p class="newsletter__error">error</p>
+        <button class="newsletter__btn">Get notified</button>
+      </div>
+    </section>
   </main>
-  <!-- 
-  
-  
-
-  
-  
-  Free
-  Unlimited products
-  Basic analytics
-  Limited marketplace exposure
-  10% fee per transaction
-
-  Dive right in
-  Ready for the big time? Our paid plan will help you take your business to the next level.
-  $25.00 /month
-  Custom domain
-  Advanced analytics and reports
-  High marketplace visibility
-  5% fee per transaction
-
-  Get notified when we launch
-  Email address
-  Get notified -->
+  <script src="./dist/js/main.min.js"></script>
 </body>
 
 </html>
