--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         <p class="newsletter__error">error</p>
         <button class="newsletter__btn">Get notified</button>
       </div>
+      <p class="newsletter__complete">successfully completed</p>
     </section>
   </main>
   <script src="./dist/js/main.min.js"></script>
